      0x0000 0xffc0 at 2 match u8 0x10 0xff at 33 flowid 1:11" Failed
   /sbin/shorewall: line 723:   755 Terminated
   $SHOREWALL_SHELL ${VARDIR}/.restart $debugging restart

4)  A POLICY of ":" in /etc/shorewall/policy would produce Perl
    run-time errors.

6)  An INTERFACE of ":" in /etc/shorewall/interfaces would produce Perl
    run-time errors.

New Features in 4.1.7.

1)  If an interface fails when using balanced multi-ISP routing, the
    default route is lost. If there are remaining working interfaces
    with dynamic gateway addresses, Shorewall will be unable to
    determine those gateways.

    Beginning with Shorewall (Shorewall-lite) 4.1.7, the 'init' script
    may participate in gateway detection by setting variables with
    pre-determined names as follows:

         <gw>_GATEWAY

    where <gw> is the interface name:

    	  - in upper case
	  - with any characters not allowed in shell variable names
	    replaced by '_'.

    Example (from OpenWRT): 

    	  Interface:           eth0.1
	  Variable:            ETH0_1_GATEWAY
          /etc/shorewall/init: 

	      ETH0_1_GATEWAY=$(uci get /var/state/network.wan0.gateway)

2)  A new CONNBYTES column has been added to the tcrules file. The
    column defines a byte or packet range that the connection must fall
    within in order for the rule to match. The contents are:

	     [!]<min>:[<max>[:{O|R|B}[:{B|P|A}]]]

    !     matches if the the packet/byte count is not within the range 
          defined by <min> and <max>.

    <min> is an integer which defines the beginning of the byte/packet
          range.

    <max> is an integer which defines the end of the byte/packet range. 
          If omitted, only the beginning of the range is checked.

    The first letter gives the direction which the range refers to:

    O    - The original direction of the connection.
    R    - The opposite direction from the original connection.
    B    - The total of both directions.
